--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,12 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# Ignore PBSHM Flask Core Folder/Files
+pbshm/authentication/
+pbshm/initialisation/
+pbshm/mechanic/
+pbshm/pathfinder/
+pbshm/static/
+pbshm/templates/
+pbshm/db.py
