--- a/.gitignore
+++ b/.gitignore
@@ -128,6 +128,9 @@ dmypy.json
 # Pyre type checker
 .pyre/
 
+# Ignore VS Code folder
+.vscode/
+
 # Ignore PBSHM Flask Core Folder/Files
 pbshm/authentication/
 pbshm/initialisation/
