--- a/.github/workflows/pypi-publish.yml
+++ b/.github/workflows/pypi-publish.yml
@@ -25,7 +25,7 @@ jobs:
         runs-on: ubuntu-latest
         environment:
             name: release
-            url: https://pypi.org/p/pbshm-core
+            url: https://pypi.org/p/pbshm-ie-toolbox
         permissions:
             id-token: write
         steps:
